client-api/base/b2b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client-api-b2b
  name: client-api-b2b
  namespace: client-api
spec:
  selector:
    matchLabels:
      app: client-api-b2b
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: client-api-b2b
    spec:
      containers:
        - name: api
          image: luuna/client-api:latest-staging
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health/
              port: 8001
              scheme: HTTP
            failureThreshold: 5
            successThreshold: 1
            periodSeconds: 30
            timeoutSeconds: 30
          resources:
            requests:
              memory: "850Mi"
              cpu: "150m"
            limits:
              memory: "1Gi"
              cpu: "250m"
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 10000
            runAsUser: 10000
          volumeMounts:
            - mountPath: /code/logs
              name: tmp
            - mountPath: /code/web/static
              name: tmp
      enableServiceLinks: true
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        purpose: backend
      volumes:
        - emptyDir: {}
          name: tmp
      restartPolicy: Always
      serviceAccount: client-api
      serviceAccountName: client-api
