client-api/base/b2b/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client-api-b2b
    service: client-api-b2b
  name: client-api-b2b
  namespace: client-api
spec:
  ports:
    - port: 80
      targetPort: 8001
      protocol: TCP
  selector:
    app: client-api-b2b
  type: ClusterIP
