client-api/base/b2b/network_policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-api-b2b
  namespace: client-api
spec:
  podSelector:
    matchLabels:
      app: client-api-b2b
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client-api-b2b
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 16548
        - protocol: TCP
          port: 80
